<resources>
    <string name="app_name">homework1-part2</string>
    <string name="full_name">Full name</string>
    <string name="show_toast">toast</string>
    <string name="show_textview">TextView</string>
    <string name="go">Go</string>
    <string name="location">Location</string>
    <string name="phone_number">Phone number</string>
    <string name="fullname">FullName</string>
    <string name="exit">EXIT</string>
    <string name="about">ABOUT</string>
    <string name="settings">SETTINGS</string>
    <string name="title_activity_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>