<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/overflowMenu"
        android:icon="@drawable/ic___vertical_dots_icon"
        android:title=""
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/settings"
                android:title="@string/settings"
                app:showAsAction="always" />
            <item
                android:id="@+id/about"
                android:title="@string/about"
                app:showAsAction="always" />
            <item
                android:id="@+id/exit"
                android:title="@string/exit"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>